tests/fsharp/core/span/test3.bsl

test3.fsx(30,17,30,23): typecheck error FS0027: This value is not mutable. Consider using the mutable keyword, e.g. 'let mutable x = expression'.

test3.fsx(38,21,38,27): typecheck error FS0027: This value is not mutable. Consider using the mutable keyword, e.g. 'let mutable x = expression'.

test3.fsx(46,26,46,27): typecheck error FS0001: The type 'Span<int>' is not compatible with the type ''a seq'

test3.fsx(47,21,47,27): typecheck error FS0027: This value is not mutable. Consider using the mutable keyword, e.g. 'let mutable x = expression'.

test3.fsx(46,26,46,27): typecheck error FS0193: Type constraint mismatch. The type 
    'Span<int>'    
is not compatible with type
    'int seq'    

